--- a/dsamainwindow.ui
+++ b/dsamainwindow.ui
@@ -20,7 +20,7 @@
    <string>Double Shot Audio Multitool</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="rsc.qrc">
+   <iconset resource="../DSA-Multitool-GUI/rsc.qrc">
     <normaloff>:/resources/images/Icon-Black.png</normaloff>:/resources/images/Icon-Black.png</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
@@ -86,7 +86,10 @@
         <item row="2" column="2">
          <widget class="QLineEdit" name="lineEdit_testFile">
           <property name="text">
-           <string>&quot;C:\Users\info\Desktop\ffmpeg test\200828 BCL Video V1.mp4&quot;</string>
+           <string/>
+          </property>
+          <property name="placeholderText">
+           <string>test file location</string>
           </property>
          </widget>
         </item>
@@ -114,7 +117,7 @@
          <string/>
         </property>
         <property name="pixmap">
-         <pixmap resource="rsc.qrc">:/resources/images/Logo-Black.png</pixmap>
+         <pixmap resource="../DSA-Multitool-GUI/rsc.qrc">:/resources/images/Logo-Black.png</pixmap>
         </property>
         <property name="scaledContents">
          <bool>true</bool>
@@ -293,7 +296,7 @@
      <x>0</x>
      <y>0</y>
      <width>845</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -336,7 +339,7 @@
   </action>
  </widget>
  <resources>
-  <include location="rsc.qrc"/>
+  <include location="../DSA-Multitool-GUI/rsc.qrc"/>
  </resources>
  <connections/>
 </ui>
