--- a/dsamainwindow.ui
+++ b/dsamainwindow.ui
@@ -20,7 +20,7 @@
    <string>Double Shot Audio Multitool</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="../DSA-Multitool-GUI/rsc.qrc">
+   <iconset resource="rsc.qrc">
     <normaloff>:/resources/images/Icon-Black.png</normaloff>:/resources/images/Icon-Black.png</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
@@ -76,7 +76,7 @@
          <string/>
         </property>
         <property name="pixmap">
-         <pixmap resource="../DSA-Multitool-GUI/rsc.qrc">:/resources/images/Logo-White.png</pixmap>
+         <pixmap resource="rsc.qrc">:/resources/images/Logo-White.png</pixmap>
         </property>
         <property name="scaledContents">
          <bool>true</bool>
@@ -88,7 +88,7 @@
     <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>4</number>
       </property>
       <widget class="QWidget" name="tab">
        <property name="enabled">
@@ -101,7 +101,7 @@
         <item row="0" column="0">
          <layout class="QGridLayout" name="gridLayout">
           <property name="horizontalSpacing">
-           <number>-1</number>
+           <number>6</number>
           </property>
           <item row="0" column="1">
            <widget class="QLabel" name="label_2">
@@ -138,7 +138,7 @@
         <item row="0" column="1">
          <layout class="QVBoxLayout" name="verticalLayout_4">
           <property name="spacing">
-           <number>-1</number>
+           <number>6</number>
           </property>
           <item>
            <widget class="QLabel" name="label_7">
@@ -308,7 +308,11 @@
         <item row="0" column="0">
          <layout class="QGridLayout" name="gridLayout_3">
           <item row="0" column="0">
-           <widget class="QTextEdit" name="label_debug"/>
+           <widget class="QTextEdit" name="label_debug">
+            <property name="readOnly">
+             <bool>true</bool>
+            </property>
+           </widget>
           </item>
          </layout>
         </item>
@@ -324,7 +328,7 @@
      <x>0</x>
      <y>0</y>
      <width>845</width>
-     <height>22</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -367,7 +371,7 @@
   </action>
  </widget>
  <resources>
-  <include location="../DSA-Multitool-GUI/rsc.qrc"/>
+  <include location="rsc.qrc"/>
  </resources>
  <connections/>
 </ui>
