Test icon relocation to .qrc file but failed. Added back the two icon files to root folder
Signed-off-by: Made Indrayana <indra@doubleshot-audio.com>

--- a/rsc.qrc
+++ b/rsc.qrc
@@ -6,5 +6,7 @@
         <file>resources/images/Logo-White.png</file>
         <file>resources/images/Flat-Logo-White.png</file>
         <file>resources/images/Flat-Logo-Black.png</file>
+        <file>resources/icons/Icon-Black-macOS.icns</file>
+        <file>resources/icons/Icon-Black-Win.ico</file>
     </qresource>
 </RCC>
