--- a/dsamainwindow.ui
+++ b/dsamainwindow.ui
@@ -29,13 +29,6 @@
      <layout class="QGridLayout" name="gridLayout_5">
       <item row="0" column="0">
        <layout class="QGridLayout" name="gridLayout_6">
-        <item row="0" column="3">
-         <widget class="QPushButton" name="browseFfmpeg">
-          <property name="text">
-           <string>Browse</string>
-          </property>
-         </widget>
-        </item>
         <item row="0" column="0">
          <widget class="QLabel" name="label_3">
           <property name="text">
@@ -43,6 +36,13 @@
           </property>
           <property name="buddy">
            <cstring>pathFfmpeg</cstring>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="3">
+         <widget class="QPushButton" name="browseFfmpeg">
+          <property name="text">
+           <string>Browse</string>
           </property>
          </widget>
         </item>
@@ -56,6 +56,27 @@
           </property>
           <property name="placeholderText">
            <string>click &quot;Browse&quot; to locate your FFmpeg binary build...</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="label_8">
+          <property name="text">
+           <string>File to Convert</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="2">
+         <widget class="QLineEdit" name="pathFile">
+          <property name="placeholderText">
+           <string>click &quot;Browse&quot; to choose file to convert...</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="3">
+         <widget class="QPushButton" name="browseFile">
+          <property name="text">
+           <string>Browse</string>
           </property>
          </widget>
         </item>
@@ -328,7 +349,7 @@
      <x>0</x>
      <y>0</y>
      <width>845</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -343,6 +364,7 @@
      <string>Debug</string>
     </property>
     <addaction name="actionffmpeg_start"/>
+    <addaction name="actionffmpeg_with_file"/>
     <addaction name="actionQSettings_status"/>
    </widget>
    <addaction name="menuFile"/>
@@ -367,6 +389,11 @@
   <action name="actionQSettings_status">
    <property name="text">
     <string>QSettings status</string>
+   </property>
+  </action>
+  <action name="actionffmpeg_with_file">
+   <property name="text">
+    <string>ffmpeg with file</string>
    </property>
   </action>
  </widget>
