Separate console output to new class and UI for cleanness; replaced console output in MainWindow with Job Queue

--- a/dsamainwindow.ui
+++ b/dsamainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>845</width>
-    <height>616</height>
+    <height>815</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -107,6 +107,23 @@
      </layout>
     </item>
     <item>
+     <widget class="QLabel" name="label_2">
+      <property name="text">
+       <string>Files to convert:</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QListWidget" name="pathFileList"/>
+    </item>
+    <item>
+     <widget class="QPushButton" name="addItem">
+      <property name="text">
+       <string>Add Videos</string>
+      </property>
+     </widget>
+    </item>
+    <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
        <number>4</number>
@@ -124,36 +141,6 @@
           <property name="horizontalSpacing">
            <number>6</number>
           </property>
-          <item row="0" column="1">
-           <widget class="QLabel" name="label_2">
-            <property name="text">
-             <string>File to convert</string>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="1">
-           <widget class="QPushButton" name="addItem">
-            <property name="text">
-             <string>Add Videos</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="1">
-           <widget class="QListView" name="listView">
-            <property name="acceptDrops">
-             <bool>true</bool>
-            </property>
-            <property name="dragEnabled">
-             <bool>true</bool>
-            </property>
-            <property name="dragDropMode">
-             <enum>QAbstractItemView::DragDrop</enum>
-            </property>
-            <property name="alternatingRowColors">
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
          </layout>
         </item>
         <item row="0" column="1">
@@ -323,17 +310,13 @@
       </widget>
       <widget class="QWidget" name="tab_5">
        <attribute name="title">
-        <string>Console Output</string>
+        <string>Job Queue</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_4">
         <item row="0" column="0">
          <layout class="QGridLayout" name="gridLayout_3">
           <item row="0" column="0">
-           <widget class="QTextEdit" name="label_debug">
-            <property name="readOnly">
-             <bool>true</bool>
-            </property>
-           </widget>
+           <widget class="QListWidget" name="listWidget"/>
           </item>
          </layout>
         </item>
@@ -366,6 +349,7 @@
     <addaction name="actionffmpeg_start"/>
     <addaction name="actionffmpeg_with_file"/>
     <addaction name="actionQSettings_status"/>
+    <addaction name="actionShow_Console_Output"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuDebug"/>
@@ -394,6 +378,14 @@
   <action name="actionffmpeg_with_file">
    <property name="text">
     <string>ffmpeg with file</string>
+   </property>
+  </action>
+  <action name="actionShow_Console_Output">
+   <property name="text">
+    <string>Show Console Output</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+1</string>
    </property>
   </action>
  </widget>
