--- a/consoleoutput.ui
+++ b/consoleoutput.ui
@@ -15,7 +15,13 @@
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="1" column="1">
-    <widget class="QPlainTextEdit" name="debugLabel">
+    <widget class="QPlainTextEdit" name="outputLabel">
+     <property name="acceptDrops">
+      <bool>false</bool>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
      <property name="readOnly">
       <bool>true</bool>
      </property>
